--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,9 @@
-.dropdown-toggle{
+.dropdown-toggle, .dropdown-item{
     cursor: pointer;
+}
+
+img{
+    max-height: 50px;
+    border: 2ox sikud white;
+    display: inline;
 }
